find_package(Doxygen)
if (NOT Doxygen_FOUND)
  message(WARNING "Doxygen not found. API Documentation will not be generated!")
  return()
endif()

# Global configuration
set(DOX_PROJECT_NAME "\"ED-247 LIBRARY\"")
set(DOX_PROJECT_VERSION ${VERSION})
set(DOX_PROJECT_BRIEF "\"ED247 standard implementation\"")
set(DOX_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
set(DOX_DOC_LANGUAGE English)
set(DOX_STRIP_FROM_PATH ${PROJECT_SOURCE_DIR})
set(DOX_INPUT "${PROJECT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR}/tmp ${PROJECT_SOURCE_DIR}/README.md")
set(DOX_USE_MDFILE_AS_MAINPAGE ${PROJECT_SOURCE_DIR}/README.md)
file(READ ${PROJECT_SOURCE_DIR}/LICENSE.md DOX_LICENSE)

# Setup examples
set(DOX_EXAMPLE_1_TITLE "Configuration walk through")
set(DOX_EXAMPLE_NICK walk_configuration)
set(DOX_EXAMPLE_1_CODE_FILENAME ${DOX_EXAMPLE_NICK}_main.c)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_1_CODE_FILENAME} DOX_EXAMPLE_1_CODE)
set(DOX_EXAMPLE_1_ECIC_FILENAME ecic_${DOX_EXAMPLE_NICK}.xml)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_1_ECIC_FILENAME} DOX_EXAMPLE_1_ECIC)

set(DOX_EXAMPLE_2_TITLE "Exchange stream samples (wait frame)")
set(DOX_EXAMPLE_NICK exchange_stream_wait_frame)
set(DOX_EXAMPLE_2_SEND_CODE_FILENAME ${DOX_EXAMPLE_NICK}_send.cpp)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_2_SEND_CODE_FILENAME} DOX_EXAMPLE_2_SEND_CODE)
set(DOX_EXAMPLE_2_SEND_ECIC_FILENAME ecic_${DOX_EXAMPLE_NICK}_send.xml)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_2_SEND_ECIC_FILENAME} DOX_EXAMPLE_2_SEND_ECIC)
set(DOX_EXAMPLE_2_RECV_CODE_FILENAME ${DOX_EXAMPLE_NICK}_recv.cpp)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_2_RECV_CODE_FILENAME} DOX_EXAMPLE_2_RECV_CODE)
set(DOX_EXAMPLE_2_RECV_ECIC_FILENAME ecic_${DOX_EXAMPLE_NICK}_recv.xml)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_2_RECV_ECIC_FILENAME} DOX_EXAMPLE_2_RECV_ECIC)

set(DOX_EXAMPLE_3_TITLE "Exchange stream samples (wait during)")
set(DOX_EXAMPLE_NICK exchange_stream_wait_during)
set(DOX_EXAMPLE_3_SEND_CODE_FILENAME ${DOX_EXAMPLE_NICK}_send.cpp)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_3_SEND_CODE_FILENAME} DOX_EXAMPLE_3_SEND_CODE)
set(DOX_EXAMPLE_3_SEND_ECIC_FILENAME ecic_${DOX_EXAMPLE_NICK}_send.xml)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_3_SEND_ECIC_FILENAME} DOX_EXAMPLE_3_SEND_ECIC)
set(DOX_EXAMPLE_3_RECV_CODE_FILENAME ${DOX_EXAMPLE_NICK}_recv.cpp)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_3_RECV_CODE_FILENAME} DOX_EXAMPLE_3_RECV_CODE)
set(DOX_EXAMPLE_3_RECV_ECIC_FILENAME ecic_${DOX_EXAMPLE_NICK}_recv.xml)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_3_RECV_ECIC_FILENAME} DOX_EXAMPLE_3_RECV_ECIC)

set(DOX_EXAMPLE_4_TITLE "Exchange stream samples (event)")
set(DOX_EXAMPLE_NICK exchange_stream_event)
set(DOX_EXAMPLE_4_SEND_CODE_FILENAME ${DOX_EXAMPLE_NICK}_send.cpp)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_4_SEND_CODE_FILENAME} DOX_EXAMPLE_4_SEND_CODE)
set(DOX_EXAMPLE_4_SEND_ECIC_FILENAME ecic_${DOX_EXAMPLE_NICK}_send.xml)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_4_SEND_ECIC_FILENAME} DOX_EXAMPLE_4_SEND_ECIC)
set(DOX_EXAMPLE_4_RECV_CODE_FILENAME ${DOX_EXAMPLE_NICK}_recv.cpp)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_4_RECV_CODE_FILENAME} DOX_EXAMPLE_4_RECV_CODE)
set(DOX_EXAMPLE_4_RECV_ECIC_FILENAME ecic_${DOX_EXAMPLE_NICK}_recv.xml)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_4_RECV_ECIC_FILENAME} DOX_EXAMPLE_4_RECV_ECIC)

set(DOX_EXAMPLE_5_TITLE "Exchange signal samples (wait frame)")
set(DOX_EXAMPLE_NICK exchange_signal_wait_frame)
set(DOX_EXAMPLE_5_SEND_CODE_FILENAME ${DOX_EXAMPLE_NICK}_send.cpp)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_5_SEND_CODE_FILENAME} DOX_EXAMPLE_5_SEND_CODE)
set(DOX_EXAMPLE_5_SEND_ECIC_FILENAME ecic_${DOX_EXAMPLE_NICK}_send.xml)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_5_SEND_ECIC_FILENAME} DOX_EXAMPLE_5_SEND_ECIC)
set(DOX_EXAMPLE_5_RECV_CODE_FILENAME ${DOX_EXAMPLE_NICK}_recv.cpp)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_5_RECV_CODE_FILENAME} DOX_EXAMPLE_5_RECV_CODE)
set(DOX_EXAMPLE_5_RECV_ECIC_FILENAME ecic_${DOX_EXAMPLE_NICK}_recv.xml)
file(READ ${PROJECT_SOURCE_DIR}/samples/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_5_RECV_ECIC_FILENAME} DOX_EXAMPLE_5_RECV_ECIC)

# Setup XSD
file(READ ${PROJECT_SOURCE_DIR}/src/ed247/xsd/ED247A_ECD.xsd DOX_XSD_ECD)
file(READ ${PROJECT_SOURCE_DIR}/src/ed247/xsd/ED247A_ECIC.xsd DOX_XSD_ECIC)

# Generate doxygen configuration
configure_file(doxyfile.in tmp/doxyfile @ONLY)
configure_file(examples.dox.in tmp/examples.dox @ONLY)
configure_file(schemas.dox.in tmp/schemas.dox @ONLY)
configure_file(license.dox.in tmp/license.dox @ONLY)
configure_file(reports.dox.in tmp/reports.dox @ONLY)
configure_file(${PROJECT_SOURCE_DIR}/tests/tests.dox tmp/tests.dox @ONLY)
configure_file(${PROJECT_SOURCE_DIR}/utils/utils.dox tmp/utils.dox @ONLY)

# List dependencies
file(GLOB DOX_DEPENDS LIST_DIRECTORIES false
  ${PROJECT_SOURCE_DIR}/*.md
  ${PROJECT_SOURCE_DIR}/doc/doxygen/*
  ${PROJECT_SOURCE_DIR}/src/ed247/*.h
  ${PROJECT_SOURCE_DIR}/src/ed247/*.cpp
  ${PROJECT_SOURCE_DIR}/src/ed247/xsd/*.xsd
  ${PROJECT_SOURCE_DIR}/samples/*/config/*.xml
  ${PROJECT_SOURCE_DIR}/samples/*/src/*.cpp
  )

# Command
set(DOX_CMD ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/tmp/doxyfile)
add_custom_command(OUTPUT doxygen/html COMMAND ${DOX_CMD} DEPENDS ${DOX_DEPENDS})

# Targets
add_custom_target(doxygen DEPENDS doxygen/html)
add_dependencies(doc doxygen)

# Install
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen/html DESTINATION doc)
